--- a/projects/landingPage8/projectPage8.css
+++ b/projects/landingPage8/projectPage8.css
@@ -16,7 +16,7 @@
     justify-content: space-around;
 }
 
-video {
+iframe {
     width: 300px;
     height: 240px;
 }
@@ -87,7 +87,8 @@ video {
     color: palevioletred;
 }
 
-#container-form-title>p {
+#container-form-title>p,
+#flex-text p {
     font: normal normal normal 1.25rem/1.8125rem IBM Plex Sans Hebrew;
     color: black;
 }
@@ -118,10 +119,9 @@ form {
 }
 
 #submit {
+    text-align: center;
     width: 20%;
-    height: 4.629vh;
     background: palevioletred 0% 0% no-repeat padding-box;
-    border-bottom: 4px solid palevioletred;
     font: normal normal bold 1.375rem/1.875rem IBM Plex Sans Hebrew;
     letter-spacing: 0.33px;
     color: #000000;
@@ -135,7 +135,7 @@ form {
         align-items: center;
     }
 
-    video {
+    iframe {
         width: 200px;
         height: 15vh;
     }
@@ -143,6 +143,11 @@ form {
     #boxes-icon {
         width: 100vw;
         height: 15vh;
+    }
+
+    .icon img {
+        width: 5vw;
+        height: 3vh;
     }
 
     #logo img {
@@ -164,7 +169,8 @@ form {
         font: normal normal 900 2.5rem/3.6875rem IBM Plex Sans Hebrew;
     }
 
-    #container-form-title>p {
+    #container-form-title>p,
+    #flex-text p {
         font: normal normal normal 0.9375rem/1.375rem IBM Plex Sans Hebrew;
     }
 
@@ -179,13 +185,10 @@ form {
     .form-control>input {
         font: normal normal bold 0.625rem/0.875rem IBM Plex Sans Hebrew;
         background: #E5EEFF 0% 0% no-repeat padding-box;
-        border: 0;
         border-bottom: 3px solid palevioletred;
     }
 
     #submit {
-        width: 40%;
-        border-bottom: 3px solid palevioletred;
         font: normal normal bold 0.625rem/0.875rem IBM Plex Sans Hebrew;
     }
 
