--- a/sass/main.css
+++ b/sass/main.css
@@ -392,16 +392,9 @@ footer #box-name {
   footer #box-name {
     font: normal normal normal 0.75rem/1.125rem Fredoka;
   }
-  #box-icon {
-    height: 65vh;
-  }
-  #box-icon .icon {
-    flex-direction: column;
-    padding: 1em;
-  }
   #box-icon .icon img {
-    width: 10.81vw;
-    height: 6.08vh;
+    width: 6vw !important;
+    height: 6vh !important;
   }
 }
 @media screen and (min-width: 1024px) and (max-height: 900px) and (max-width: 1200px) {
