--- a/sass/_article.scss
+++ b/sass/_article.scss
@@ -37,9 +37,12 @@
             }
 
             #icon {
+                display: flex;
+                gap: 5px;
+
                 img {
-                    width: 40px;
-                    height: 40px;
+                    width: 30px;
+                    height: 30px;
                 }
             }
         }
@@ -58,34 +61,34 @@
 
     #articleHTML,
     #articleJS {
-        direction: rtl;
         width: 100vw;
         height: 483vh;
-    }
 
-    #gallery {
-        width: 80%;
-        height: 90%;
 
-        .card {
-            width: 100%;
-            height: 20%;
-            margin: 1em;
-        }
+        #gallery {
+            width: 80%;
+            height: 90%;
 
-        .card-body {
-            h5 {
-                font: normal normal bold 1rem/1.5rem Fredoka;
+            .card {
+                width: 100%;
+                height: 20%;
+                margin: 1em;
             }
 
-            p {
-                font: normal normal normal 1rem/1.5rem Fredoka;
-            }
+            .card-body {
+                h5 {
+                    font: normal normal bold 1rem/1.5rem Fredoka;
+                }
 
-            #icon {
-                img {
-                    width: 22px;
-                    height: 40px;
+                p {
+                    font: normal normal normal 1rem/1.5rem Fredoka;
+                }
+
+                #icon {
+                    img {
+                        width: 22px;
+                        height: 40px;
+                    }
                 }
             }
         }
@@ -99,17 +102,18 @@
     #articleJS {
         width: 100vw;
         height: 550vh;
-    }
 
-    #gallery {
-        width: 80%;
-        height: 90%;
 
-        .card {
-            width: 100%;
-            height: 20%;
-            margin: 1em;
+        #gallery {
+            width: 80%;
+            height: 90%;
+
+            .card {
+                width: 100%;
+                height: 20%;
+                margin: 1em;
+            }
+
         }
-
     }
 }
