--- a/sass/main.css
+++ b/sass/main.css
@@ -274,10 +274,15 @@ section .link {
   text-align: center;
   font: normal normal normal 0.875rem/1.375rem Fredoka;
 }
+#articleHTML #gallery .card-body #icon,
+#articleJS #gallery .card-body #icon {
+  display: flex;
+  gap: 5px;
+}
 #articleHTML #gallery .card-body #icon img,
 #articleJS #gallery .card-body #icon img {
-  width: 40px;
-  height: 40px;
+  width: 30px;
+  height: 30px;
 }
 #articleHTML #gallery .btn-primary,
 #articleJS #gallery .btn-primary {
@@ -290,26 +295,30 @@ section .link {
 @media screen and (max-width: 992px) {
   #articleHTML,
   #articleJS {
-    direction: rtl;
     width: 100vw;
     height: 483vh;
   }
-  #gallery {
+  #articleHTML #gallery,
+  #articleJS #gallery {
     width: 80%;
     height: 90%;
   }
-  #gallery .card {
+  #articleHTML #gallery .card,
+  #articleJS #gallery .card {
     width: 100%;
     height: 20%;
     margin: 1em;
   }
-  #gallery .card-body h5 {
+  #articleHTML #gallery .card-body h5,
+  #articleJS #gallery .card-body h5 {
     font: normal normal bold 1rem/1.5rem Fredoka;
   }
-  #gallery .card-body p {
+  #articleHTML #gallery .card-body p,
+  #articleJS #gallery .card-body p {
     font: normal normal normal 1rem/1.5rem Fredoka;
   }
-  #gallery .card-body #icon img {
+  #articleHTML #gallery .card-body #icon img,
+  #articleJS #gallery .card-body #icon img {
     width: 22px;
     height: 40px;
   }
@@ -320,11 +329,13 @@ section .link {
     width: 100vw;
     height: 550vh;
   }
-  #gallery {
+  #articleHTML #gallery,
+  #articleJS #gallery {
     width: 80%;
     height: 90%;
   }
-  #gallery .card {
+  #articleHTML #gallery .card,
+  #articleJS #gallery .card {
     width: 100%;
     height: 20%;
     margin: 1em;
