--- a/projectsJS/tic tac toe/style.css
+++ b/projectsJS/tic tac toe/style.css
@@ -83,6 +83,10 @@ button {
         font-size: 15px;
     }
 
+    button {
+        font-size: 0.8em;
+    }
+
     #players>div {
         width: 80px;
         height: 80px;
